# tizen-devicemgr

./: 0001-package-version-up-to-0.1.62.patch  configure.ac
packaging/: e-mod-tizen-devicemgr.spec
protocol/: eom-client-protocol.h  eom-protocol.c  eom-server-protocol.h  eom.xml
src/: Makefile.am  e_devicemgr_buffer.c  e_devicemgr_buffer.h  e_devicemgr_conf.c  e_devicemgr_device.c  e_devicemgr_device.h  e_devicemgr_dpms.c  e_devicemgr_embedded_compositor.c  e_devicemgr_eom.c  e_devicemgr_eom.h  e_devicemgr_input.c  e_devicemgr_privates.h  e_devicemgr_screenshooter.c  e_devicemgr_tdm.c  e_devicemgr_tdm.h  e_devicemgr_video.c  e_devicemgr_video.h  e_devicemgr_viewport.c  e_devicemgr_viewport.h  e_mod_main.c
